.provarCaches/00D5f000005vwGkEAI/objects/rstk__icdoi__c.object
<CustomObject>
    <description>icdoi__c; BOC</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__icdoi_icitem__r.rstk__externalid__c + TEXT(rstk__icdoi_date__c) + TEXT(rstk__icdoi_simseq__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__icdoi_icitem__r.rstk__icitem_item__r.rstk__peitem_item__c + &apos;-&apos; + TEXT( rstk__icdoi_date__c ) + &apos; &apos; + TEXT( rstk__icdoi_simseq__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icdoi_dailytsl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Daily TSL Consumed</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdoi_date__c</fullName>
        <inlineHelpText>Date of the DOI record</inlineHelpText>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__icdoi_div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Applicable DIvision</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Daily DOI by Item</relationshipLabel>
        <relationshipName>icdois</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icdoi_doidesired__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Desired days of Inventory</inlineHelpText>
        <label>Desired Days of Inventory</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdoi_doifcst__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of Days of Inventory based upon Forecast</inlineHelpText>
        <label>Days of Inventory Based on Forecast</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdoi_doifcstar__c</fullName>
        <label>DOI Based on Forecast with All Reqs</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdoi_doifcstle__c</fullName>
        <label>DOI Based on Forecast with Expired Lots</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdoi_doiusage__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of Days of Inventory based upon Usage</inlineHelpText>
        <label>Days of Inventory Based on Usage</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdoi_doiusagele__c</fullName>
        <label>DOI Based on Usage with Expired Lots</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdoi_exploss__c</fullName>
        <label>Anticipated Expiration Loss</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdoi_forecast__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Daily Forecast Amount</inlineHelpText>
        <label>Daily Forecast Amount</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdoi_forecastavg__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Monthly Forecast amount evenly divided by the number of days in the Forecast Month</inlineHelpText>
        <label>Average Daily Forecast Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdoi_icitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Inventory Item</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>Daily DOI by Item</relationshipLabel>
        <relationshipName>icdois</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icdoi_locid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Warehouse - this is a lookup to the Location IDs.</inlineHelpText>
        <label>Warehouse</label>
        <referenceTo>rstk__sylocid__c</referenceTo>
        <relationshipLabel>Daily DOI by Item</relationshipLabel>
        <relationshipName>icdois</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icdoi_pctdoifcst__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Compares Forecast DOI to the Desired Days of Inventory</inlineHelpText>
        <label>Percentage DOI-Forecast  to Desired</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdoi_pctdoifcstcolor__c</fullName>
        <inlineHelpText>Forecast Color  (Red, Yellow, Green)</inlineHelpText>
        <label>DOI per Forecast Color</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__icdoi_pctdoiusage__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Compares Usage DOI to the Desired Days of Inventory</inlineHelpText>
        <label>Percentage DOI-Usage to Desired</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdoi_pctdoiusagecolor__c</fullName>
        <inlineHelpText>Usage  Color  (Red, Yellow, Green)</inlineHelpText>
        <label>DOI per Usage Color</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__icdoi_povend__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Supplier for this item.  Default from Supplier Item Master.</inlineHelpText>
        <label>Vendor</label>
        <referenceTo>rstk__povend__c</referenceTo>
        <relationshipLabel>Daily DOI by Item</relationshipLabel>
        <relationshipName>icdois</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icdoi_qtyohbod__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Quantity On hand at beginning of the Day</inlineHelpText>
        <label>Qty On Hand at BOD</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdoi_qtyohbodar__c</fullName>
        <label>Qty On Hand at BOD with All Reqs</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdoi_qtyohbodle__c</fullName>
        <label>Qty On Hand at BOD with Expired Lots</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdoi_qtyoheod__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Quantity On hand at end of the Day</inlineHelpText>
        <label>Qty On Hand at EOD</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdoi_qtyoheodar__c</fullName>
        <label>Qty On Hand at EOD with All Reqs</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdoi_qtyoheodle__c</fullName>
        <label>Qty On Hand at EOD with Expired Lots</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdoi_replaceitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the replacement Part Number.</inlineHelpText>
        <label>Replacement Part Number</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>Daily DOI by Item (Replacement Part Number)</relationshipLabel>
        <relationshipName>icdoi_replacements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icdoi_shipdreqsdue__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Shipped Reqs Due Today</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdoi_simseq__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Tis is the associated Sequence for a Simulation run.</inlineHelpText>
        <label>Simulation Sequence</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdoi_simulation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indcates whether this is from a Simulation run or not.</inlineHelpText>
        <label>Simulation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__icdoi_simuser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the User that initiated the Simulation.</inlineHelpText>
        <label>Simulation User</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipLabel>Daily DOI by Item</relationshipLabel>
        <relationshipName>icdois</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icdoi_ssl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>SSL Quantity</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdoi_totreq__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of Requisitions due today</inlineHelpText>
        <label>Reqs Due Today</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdoi_usage__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the Daily usage.</inlineHelpText>
        <label>Daily Usage</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdoi_usagefrdate__c</fullName>
        <inlineHelpText>This is the first Date used to calculate Usage Average.</inlineHelpText>
        <label>First Date used for Usage Average</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__icdoi_usagetodate__c</fullName>
        <inlineHelpText>This is the last Date used to calculate Usage Average.</inlineHelpText>
        <label>Last Date used for Usage Average</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__icdoi_whunits__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Number of Warehouse Units</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Daily DOI by Item</label>
    <listViews>
        <fullName>rstk__RS_Daily_DOI_by_Item</fullName>
        <columns>NAME</columns>
        <columns>rstk__icdoi_div__c</columns>
        <columns>rstk__icdoi_icitem__c</columns>
        <columns>rstk__icdoi_date__c</columns>
        <columns>rstk__icdoi_forecast__c</columns>
        <columns>rstk__icdoi_usage__c</columns>
        <columns>rstk__icdoi_shipdreqsdue__c</columns>
        <columns>rstk__icdoi_totreq__c</columns>
        <columns>rstk__icdoi_doidesired__c</columns>
        <columns>rstk__icdoi_pctdoifcst__c</columns>
        <columns>rstk__icdoi_pctdoiusage__c</columns>
        <columns>rstk__icdoi_qtyohbod__c</columns>
        <columns>rstk__icdoi_qtyoheod__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Daily DOI by Item</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Daily DOI by Item</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>